--- a/server/plugins/UhcCore/crafts.yml
+++ b/server/plugins/UhcCore/crafts.yml
@@ -33,6 +33,22 @@ custom-crafts:
    revive-with-inventory: true
    limit: -1
 
+  'End portal':
+    '1': '{"type":"ENDER_EYE"} {"type":"ENDER_EYE"} {"type":"ENDER_EYE"}'
+    '2': '{"type":"ENDER_EYE"} {"type":"ENDER_EYE"} {"type":"ENDER_EYE"}'
+    '3': '{"type":"ENDER_EYE"} {"type":"ENDER_EYE"} {"type":"ENDER_EYE"}'
+    craft: '{"type":"END_PORTAL"}'
+    default-name: true
+    limit: -1 
+
+  'War Axe':
+    '1': '{"type":"IRON_INGOT"} {"type":"IRON_INGOT"} {"type":"AIR"}'
+    '2': '{"type":"IRON_INGOT"} {"type":"IRON_BLOCK"} {"type":"AIR"}'
+    '3': '{"type":"AIR"} {"type":"IRON_BLOCK"} {"type":"AIR"}'
+    craft: '{"type":"IRON_AXE","enchantments":[{"type":"DAMAGE_ALL","level":2},{"type":"FIRE_ASPECT","level":1}]}'
+    default-name: false
+    limit: 1
+
 #A list of items that you don't want players to be able to craft
 # Please respect the json-item syntax! (You can use the /iteminfo command to generate this syntax.)
 # To remove all items change to "ban-items-crafts: []"
